# Final-production-ready-Intaxi-release

./: .env.example  .gitignore  FINAL_PATCH_NOTES.txt  GITHUB_COMPARE_MERGE_NOTES_RU.txt  INTAXI_FINAL_CHANGELOG_RU.txt  apply_final_fixes.py  build-pages.sh  eslint.config.mjs  package-lock.json  package.json  project_part_1.txt  project_part_2.txt  project_part_3.txt  project_part_4.txt
backend_v2/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend_v2/alembic/: env.py
backend_v2/alembic/versions/: 0001_init_v2_schema.py  0002_add_city_order_comment.py
backend_v2/app/: __init__.py  main.py
backend_v2/app/api/: __init__.py  deps.py
backend_v2/app/cli/: __init__.py  check_backend.py  seed_admin.py
backend_v2/app/core/: config.py  database.py  errors.py  protected_values.py  telegram_auth.py
backend_v2/app/domain/: __init__.py  money_statuses.py  ride_statuses.py  user_roles.py
backend_v2/app/models/: __init__.py  admin.py  base_mixins.py  city.py  commission.py  country.py  donation.py  driver.py  events.py  intercity.py  money.py  support.py  user.py
backend_v2/app/schemas/: __init__.py  city.py  common.py  donation.py  driver.py  intercity.py  support.py  user.py  wallet.py
backend_v2/app/services/: __init__.py  admin_audit_service.py  city_order_service.py  city_trip_service.py  commission_service.py  driver_availability_service.py  intercity_service.py  pricing_service.py  wallet_service.py
backend_v2/tests/: test_city_flow_smoke.py  test_metadata_smoke.py  test_protected_values.py  test_telegram_auth.py
(+140 files in other folders)
